More responsive fixes
* Reduce size of people image on small screens
* Stack tabs on larger screens than before, otherwise they quickly wrap
around
* Prevent tweets from overflowing outside of their container on small
screens

--- a/_default/web/css/customer.css
+++ b/_default/web/css/customer.css
@@ -202,7 +202,7 @@ ul.nav-tabs li.nav-item a.disabled {
     color: #999;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 992px) {
     /* Stack the tabs on small screens */
     ul.nav-tabs,
     li.nav-item {
@@ -328,10 +328,10 @@ section.search-cart {
     padding-left: 1.25rem;
 }
 
-@media (max-width: 576px) {
+@media (max-width: 768px) {
     .search-result-people img {
         margin-top: 1rem;
-        width: 35%;
+        width: 25%;
     }
 }
 
@@ -398,6 +398,8 @@ section.search-cart {
 .search-result-twitter-tweet {
     min-height: 4.5rem;
     max-height: 4.5rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 /** Contextual Navigation */
